fixed glitch were front of card was visible on the back side with position relative.

--- a/view/css/levels.css
+++ b/view/css/levels.css
@@ -1,5 +1,5 @@
 body {
-  background: #fcf700;
+  /* background: #fcf700; */
   background: radial-gradient(circle, #fcf700 30%, #ff0000 200%);
 }
 header {
@@ -68,6 +68,8 @@ header {
   /* background: #FFF; */
   /* text-align: center; */
   /* line-height: 200px; */
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   /* border-radius: 2px; */
@@ -76,6 +78,8 @@ header {
 .card .back {
   /* background: #222; */
   /* color: #FFF; */
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
   -webkit-transform: rotateX(180deg);
   transform: rotateX(180deg);
 }
@@ -129,7 +133,7 @@ hr {
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   margin: auto;
-  /* position: relative; */
+  position: relative;
   height: 400px;
   width: 300px;
   backface-visibility: hidden;
